--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.web.resources.add-mappings=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=battuvamsi5@gmail.com
-spring.mail.password=zafbzkficnueauet
+spring.mail.password=zuhj aswo potr gtbv
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
